decklinksrc: add send_event handler so application can inject EOS event

This is needed to shut down a recording pipeline cleanly.

https://bugzilla.gnome.org/show_bug.cgi?id=680700